388		C++			Tiny mistake in readme fixed.
390		C++			Unciv nations get reforms.
392		C++			Unciv reforms fire proper effects.
394		C++			Bill of Rights NI reduces slaves by 10%
395		C++			Upper House determined by sliders.
421		C++			Incorporate better political party code.
422		C++			Build unit strengths on the fly from the EU3 folder if unit_strength.txt doesn't exist, and remove it by default.  Should make converting from mods easier.
424		C++			Pop idealogies determined by upper house
425		C++			Pop issues from political parties
426		C++			Correctly detect IN 3.2 saves
434		C++			Allow the parser to skip sets of empty braces (EU3 seems to stick them in occasionally).
435		C++			Don't crash when encountering a cored province with no owner.
437		C++			Allow comments that have no comment text, just a # by itself.
438		C++			Use forward declarations instead of #includes in EU3World
439		C++			Move files around
440		C++			Make log.txt easier to read
443		C++			Use forward declarations instead of #includes in V2World
444		C++			Update data files for new countries in 2.31
447		C++			No capitalists, clerks, or craftsmen in unciv nations
448		C++			Refactor EU3 Province
449		C++			Change removal of dead landless nations to use pop ratios instead of majority culture
450		C++			Finish refactoring EU3 Province
451		C++			Refactor a bunch of EU3 classes
452		C++			Formatting of refactored classes
453		C++			Refactor EU3Country
455		C++			Refactor EU3World
456		C++			EU3 classes now with added const
457		C++			Refactor misc source files
458		C++			Remove redundant consts (don't program before having tea)
459		C++			Refactor minor V2 classes
460		C++			Refactor V2Pop
461		C++			Refactor V2Province
462		C++			Refactor V2State
463		C++			Refactor V2Country
464		C++			Refactor V2World
465		C++			Refactor Configuration
466		C++			Refactor Date
467		C++			Refactor Mapper
468		C++			Refactor EU3toV2Coverter.cpp
469		C++			More consise use of make_pair()